syntax = "proto3";

package tpa;

import "tba.proto";

message Schedule {
  repeated Team teams = 1;
  repeated Match matches = 2;
}

message TeamRP {
  Team team = 1;
  int32 rp = 2;
  WLT_Record record = 3;
}

message FakeAlliance {
  Team captain = 1;
  Team first_pick = 2;
  Team second_pick = 3;
  reserved 4;
  int32 seed = 5;
}

message FakeEvent {
  string event_key = 1;
  Schedule schedule = 2;
  repeated TeamRP rankings = 3;
  repeated FakeAlliance alliance_selection = 4;
}
